--- a/app.json
+++ b/app.json
@@ -29,7 +29,8 @@
     },
     "plugins": [
       "expo-router",
-      "react-native-nfc-manager"
+      "react-native-nfc-manager",
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true
